k8s/apps/mdbook/base/namespace.mdbook.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mdbook
  labels:
    app.kubernetes.io/name: mdbook
    app.kubernetes.io/part-of: mdbook
