k8s/apps/mdbook/base/referenceGrant.envoy-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: envoy-gateway
  namespace: mdbook
  labels:
    app.kubernetes.io/name: mdbook
    app.kubernetes.io/part-of: mdbook
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: envoy-gateway
  to:
  - group: ""
    kind: Secret
