k8s/apps/mdbook/base/service.mdbook-production.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mdbook-production
  namespace: mdbook
  labels:
    app.kubernetes.io/name: mdbook-production
    app.kubernetes.io/part-of: mdbook
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mdbook-production
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
