k8s/apps/mdbook/base/httpRoute.mdbook-production.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mdbook-production
  namespace: mdbook
  labels:
    app.kubernetes.io/name: mdbook-production
    app.kubernetes.io/part-of: mdbook
spec:
  parentRefs:
  - name: ingress-1
    namespace: envoy-gateway
    sectionName: https
  hostnames:
  - CHANGEME
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: mdbook-production
      port: 80
