k8s/apps/mdbook/base/httpRoute.mdbook-redirect.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mdbook-redirect
  namespace: mdbook
  labels:
    app.kubernetes.io/name: mdbook
    app.kubernetes.io/part-of: mdbook
spec:
  parentRefs:
  - name: ingress-1
    namespace: envoy-gateway
    sectionName: http
  hostnames:
  - CHANGEME
  - CHANGEME
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
